--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,8 @@
   flex-direction: column;
   align-items: center;
   margin-top: 20px;
+  background-color: #e9eaee;
+  /* width: full; */
 }
 
 .keyboard-row {
@@ -68,20 +70,57 @@
 
 .keyboard button {
   font-weight: bold;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
   outline: none;
   border: none;
   border-radius: 5px;
-  padding: 8px 16px;
+  padding: 8px 12px;
   font-size: 15px;
-  background-color: #585858;
+  background-color: white;
   cursor: pointer;
   margin: -2px;
 }
 
 .keyboard button:hover {
-  background-color: rgb(51, 65, 85);
+  background-color: #5f97f6;
 }
 
 .space-key {
-  width: 300px;
+  width: 200px;
+}
+
+.guess-key {
+  background-color: #5f97f6 !important;
+  color: white;
+}
+.hint-key {
+  background-color: #324350 !important;
+  color: white;
+}
+/* Responsive CSS */
+@media screen and (max-width: 768px) {
+  .keyboard {
+    margin-top: 10px;
+  }
+
+  .keyboard-row {
+    flex-wrap: wrap;
+  }
+
+  .keyboard button {
+    padding: 6px 10px;
+    font-size: 13px;
+  }
+
+  .space-key {
+    width: 150px;
+  }
+  .guess-key {
+    background-color: #5f97f6;
+  }
+  .hint-key {
+    background-color: #324350;
+    /* width: 20%; */
+  }
+
 }
